--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     background-attachment: fixed;
 }    
 
-.button1 {
+/*.button1 {
     font-size: 20px;
     width: 20em;
     height: 3em;
@@ -22,4 +22,4 @@ body {
     margin-left: 33%;
     margin-top: 15%;
     margin-bottom: -15%;
-}
+}*/
