--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,24 @@ body {
     background-attachment: fixed;
 }    
 
-/*.button1 {
-    font-size: 20px;
-    width: 20em;
-    height: 3em;
-    border-radius: 15px;
-    margin-left: 37%;
-    margin-top: 35%;
-    color:blueviolet;
-    background-color: black;
-    border: solid;
+.getFortune {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25%;
 }
 
 .fortune-display {
-    color: white;
-    margin-left: 33%;
-    margin-top: 15%;
-    margin-bottom: -15%;
-}*/
+    color: aqua;
+    font-size: 40px;
+    padding-bottom: 2em;
+}
+
+#clickMe {
+    background-color: lightblue;
+    border: solid;
+    padding: 0.5em 3em;
+    border-radius: 15px;
+    font-size: 20px;
+    color: blueviolet;
+}
