--- a/styles.css
+++ b/styles.css
@@ -3,26 +3,35 @@ body {
     background-size: cover;
     margin: 0;
     background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repeat;
 }    
 
 .getFortune {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25%;
+    margin-top: 20%;
 }
 
 .fortune-display {
     color: aqua;
-    font-size: 40px;
+    font-size: 3rem;
     padding-bottom: 2em;
+    text-align: center;
 }
 
 #clickMe {
     background-color: lightblue;
     border: solid;
     padding: 0.5em 3em;
-    border-radius: 15px;
-    font-size: 20px;
+    border-radius: 1rem;
+    font-size: 1rem;
     color: blueviolet;
+}
+
+@media screen and (max-width: 700px) {
+    .getFortune {
+        margin-top: 35%;
+    }
 }
